--- a/react-interview-rent-car/src/App.css
+++ b/react-interview-rent-car/src/App.css
@@ -1,38 +1,81 @@
 .App {
+  font-family: sans-serif;
+  position: relative;
+  width: 80vw;
+  margin-right: auto;
+  margin-left: auto;
+  margin-top: 30px;
+  color: #14877c;
+}
+.heading {
+  color: #14877c;
+  border-bottom: 1px solid #14877c;
+  margin-bottom: 30px;
+  padding-bottom: 10px;
+}
+input {
+  width: 40%;
+  min-width: 200px;
+  border-radius: 10px;
+  border: 2px solid #14877c;
+  padding: 10px;
+  font-size: 14px;
+}
+button {
+  height: 40px;
+  border-radius: 4px;
+  margin-top: 10px;
+  font-size: 15px;
+  display: inline-block;
   text-align: center;
+  /* user-select: none; */
+  font-weight: 600;
+  border-radius: 4px;
+  color: #ffffff;
+  border: 1px solid #14877c;
+  background-color: #14877c;
+  cursor: pointer;
+  margin: 0px 15px;
+  min-width: 100px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+button:hover {
+  background: #14877c;
+  color: #ffffff;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+table {
+  width: 100%;
+  padding: 1em;
+  margin: 20px 0;
+  border-collapse: collapse;
+  box-shadow: 0 1px 2px 0 #c6e8c9;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+thead {
+  background-color: #caf0ec;
+  font-size: 16px;
 }
 
-.App-link {
-  color: #61dafb;
+th {
+  text-align: left;
+  padding: 8px;
+  background-color: 1px solid #ffffff;
+  color: #14877c;
+}
+td {
+  text-align: left;
+  padding: 8px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+tr {
+  height: 50px;
+}
+
+tr:nth-child(even) {
+  background-color: #e0e0e0;
+}
+img {
+  max-width: 70px;
+  border-radius: 8px;
 }
